@@ -18,9 +18,6 @@ compiler.arg=-source 1.4
 test.jvmarg=-Xrunhprof:cpu=samples,depth=20
 #test.jvmarg=
 
-# Build OEMM viewer
-build.oemm=true
-
 # Build tests
 build.tests=true
 
@@ -33,10 +30,12 @@ javadoc.dir=doc/api
 project.name=${ant.project.name}
 jar=lib/${project.name}.jar
 jar.dependencies=jcae-mesherocc.jar log4j-1.2.8.jar trove.jar . xml-apis.jar xalan.jar
+test.jar=lib/jcae-test.jar
+test.jar.dependencies=${project.name}.jar jcae-viewer3d.jar
 mesherocc.jar=lib/jcae-mesherocc.jar
 mesherocc.jar.dependencies=occjava.jar
 jpda.address=8002
 
 # test classes. They are only compiled if build.tests is set to true.
 # They require jcae-viewer3d
-test.packages=org/jcae/mesh/bora/tests/** org/jcae/mesh/amibe/util/tests/**
+test.packages=org/jcae/mesh/bora/tests/** org/jcae/mesh/amibe/util/tests/** org/jcae/mesh/amibe/patch/tests/** org/jcae/mesh/MeshOEMMView.* org/jcae/mesh/MeshOEMMViewer3d.*
